public/src/css/silverBox.scss
@import "./components/cssConfig";
@import "./modules/silverBoxReset";
@import "./components/input";
@import "./components/buttons";
@import "./components/header";
@import "./components/icons";
@import "./components/loadingAnimation";
@import "./components/footer";
@import "./modules/animations";

body {
	&.stop-scrolling {
		height: 100%;
		overflow: hidden;
	}
}

.silverBox-container {
	z-index: var(--silverBox-z-index);
	display: grid;
	overflow-y: auto;
	padding: 20px 10px;

	// silver box modal
	&.silverBox-overlay {
		width: var(--silverBox-overlay-width);
		height: var(--silverBox-overlay-height);
		position: fixed;
		top: 0;
		left: 0;
		justify-content: center;
		background-color: var(--silverBox-overlay-background);
	}

	.silverBox {
		position: relative;
		box-sizing: border-box;
		width: var(--silverBox-width);
		min-width: var(--silverBox-min-width);
		max-width: var(--silverBox-max-width);
		max-height: var(--silverBox-max-height);
		display: grid;
		grid-column: 2;
		align-self: center;
		justify-self: center;
		border: var(--silverBox-border);
		border-color: var(--silverBox-border-color);
		border-radius: var(--silverBox-border-radius);
		padding: var(--silverBox-padding);
		box-shadow: var(--silverBox-box-shadow);
		background-color: var(--silverBox-background-color);
		overflow: hidden;
		// modal Animation
		animation: popUp 0.3s linear;

		// timerBar for timeout modals
		.timer-bar {
			position: absolute;
			bottom: 0;
			width: 100%;
			height: var(--silverBox-timer-bar-height);
			border-radius: var(--silverBox-timer-bar-border-radius);
			background-color: var(--silverBox-timer-bar);
		}
		*:first-child {
			margin-top: 0;
		}
	}

	.silverBox-body-wrapper {
		margin-top: var(--silverBox-items-top-margin);
		*:first-child {
			margin-top: 0;
		}
		.silverBox-body-description {
			color: var(--silverBox-text-color);
			font-size: var(--silverBox-text-font-size);
			font-weight: var(--silverBox-text-font-weight);
		}
	}
	// popUp animation
	@keyframes popUp {
		50% {
			transform: scale(1.05);
		}
	}

	// timerBar animation
	@keyframes timer {
		from {
			width: 100%;
		}
		to {
			width: 0%;
		}
	}

	@media only screen and (max-width: 800px) {
		.silverBox-container {
			padding: 6px;
		}
		.silverBox {
			max-width: 90vw;
			min-width: unset;
		}
	}

	&.silverBox-top-right,
	&.silverBox-top-center,
	&.silverBox-top-left,
	&.silverBox-bottom-right,
	&.silverBox-bottom-center,
	&.silverBox-bottom-left {
		position: fixed;
		width: -moz-fit-content;
		width: fit-content;
		height: fit-content;
		overflow-x: hidden;
	}

	&.silverBox-top-right,
	&.silverBox-top-center,
	&.silverBox-top-left {
		top: var(--silverBox-top-distance);
	}

	&.silverBox-top-right {
		@include rightToLeft;
		right: var(--silverBox-top-right-distance);
	}

	&.silverBox-top-center {
		@include topToBottom;
		transform: translateX(50%);
		right: 50%;
	}

	&.silverBox-top-left {
		@include leftToRight;
		left: var(--silverBox-top-left-distance);
	}

	// bottom
	&.silverBox-bottom-right,
	&.silverBox-bottom-left,
	&.silverBox-bottom-center {
		bottom: var(--silverBox-bottom-distance);
	}

	&.silverBox-bottom-right {
		@include rightToLeft;
		right: var(--silverBox-bottom-right-distance);
	}

	&.silverBox-bottom-center {
		@include bottomToTop;
		transform: translateX(50%);
		right: 50%;
	}

	&.silverBox-bottom-left {
		@include leftToRight;
		left: var(--silverBox-bottom-left-distance);
	}
}

